Criação da pagina cadastro e correção na inaterface login

--- a/_css/style.css
+++ b/_css/style.css
@@ -73,6 +73,11 @@ div#menu ul{
 
 }
 
+#menu2 .row{
+    margin: 0px auto 0px 10%;
+}
+
+
 #vistosRecentemente{
     transform: rotate(2deg);
     margin:15px;
