--- a/_css/styleshowcurso.css
+++ b/_css/styleshowcurso.css
@@ -5,10 +5,12 @@ div.Logocurso {
 }
 div.Logocurso img {
     height: 25%;
+    max-width: 160px;
 }
 
 div.infocurso img#linha {
     height: 15%;
+    max-width: 160px;
 }
 
 div.apresentacaocurso iframe{
@@ -27,4 +29,20 @@ div.conteudo {
 
 div.conteudo table, h2{
     margin: 5% 5% auto 15%;
+}
+
+.botao3d {
+    display: block;
+    border: 1px solid;
+    width: 200px;
+    padding: 10px;
+    background: #3d844b; 
+    color: white;
+}
+
+.botao3d:hover	{
+    position: relative;
+    top: 1px;
+    left: 1px;
+    background: #3F6;
 }
