--- a/_css/style.css
+++ b/_css/style.css
@@ -7,9 +7,8 @@ body{
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
-    
+    width: 100%;
 }
-
 
 div#popupPerfil{
     position: absolute;
