--- a/css/style.css
+++ b/css/style.css
@@ -129,16 +129,14 @@ fieldset#login a{
 	padding: 2px;
 }
 
-/*Destaque*/
-
-div#destque{
-	margin:10px;
-}
+/*Banner*/
 
 img#banner{
     filter:grayscale(20%);
-    width:500px;
-    height:300px;
+    max-width:500px;
+    max-height:300px;
+    width: 80%;
+    height: auto;
     background-size:cover;
 }
 
@@ -151,8 +149,7 @@ div.curso:hover {
 }
 
 img#destaque {
-    width: 100px;
-    height: 90px;
+    width: 10%;
     align:center;
 }
 
