--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,13 @@
     padding: 0;
 }
 
-body{
-    background-size: 100%;
-    background-image: url(./img/wpp.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+html, body{
+    background:#d3d3d3; 
+    min-height:100%;
+    min-width: 100%;
     background-size: cover;
     background-position: center center;
-    width: 100%;
+    background-attachment: fixed;
 }
 
 div#popupPerfil{
@@ -44,7 +43,6 @@ div#popupPerfil ul{
 #conteudo{
     padding-top: 5rem;
     background: #d3d3d3;
-    padding-bottom: 7%;
 }
 
 #textCenter{
