Adição das atividades no sumário

--- a/css/boxSumario.css
+++ b/css/boxSumario.css
@@ -149,15 +149,22 @@ ol.sub li a:hover {
 #aula1:target ~ header #link-aula1 a,
 #atividade1:target ~ header #link-atividade1 a,
 #aula1.2:target ~ header #link-aula1.2 a,
+#atividade2:target ~ header #link-atividade2 a,
 #aula1.3:target ~ header #link-aula1.3 a,
-#aula2:target ~ header #link-aula2 a,
-#dica01:target ~ header #link-dica01 a,
-#unidade2:target ~ header #link-unidade2 a,
+#atividade3:target ~ header #link-atividade3 a,
+#aula2:target ~ header #link-aula2 a,v
+#dica01:target ~ header #link-dica01 av,
+#unidade2:target ~ header #link-unidadev2 a,
 #aula3:target ~ header #link-aula3 a,
+#atividade4:target ~ header #link-atividade4 a,
 #aula3.2:target ~ header #link-aula3.2 a,
+#atividade5:target ~ header #link-atividade5 a,
 #aula3.3:target ~ header #link-aula3.3 a,
+#atividade6:target ~ header #link-atividade6 a,
 #aula4.1:target ~ header #link-aula4.1 a,
+#atividade7:target ~ header #link-atividade7 a,
 #aula4.2:target ~ header #link-aula4.2 a,
+#atividade7:target ~ header #link-atividade7 a,
 #aula5.1:target ~ header #link-aula5.1 a,
 #aula5.1.2:target ~ header #link-aula5.1.2 a,
 #aula5.2:target ~ header #link-aula5.2 a,
