--- a/css/styleviewcursoV1.css
+++ b/css/styleviewcursoV1.css
@@ -4,24 +4,24 @@ section#corpo{
     background: #d3d3d3;
 }
 
-/* TAMANHO PARA TELA DE CELULAR */
+/* TAMANHO PARA TELA DE PC */
 @media screen and (min-width: 900px) {
     .espaco{
-      margin: 0 50px 10% 30%;
-      height: 100%;
-    } 
+      margin: 0 50px 0 30%;
+      height: none;
+      
+    }
   }
 
-/* TAMANHO PARA TELA DE PC */
+/* TAMANHO PARA TELA DE CELULAR */
 @media screen and (max-width: 900px) {
     .espaco{
       padding: 2rem;
-      height: 100%;
+      height: none;
     }
 
-    embed{
-        height: 600px;
-        width: 100%;
+    section#corpo h4{
+        font-size: 25px;
     }
   }
 
@@ -37,9 +37,9 @@ section#corpo{
     transition: 0.5s;
     padding-top: 5rem;
     text-align:center;
-  }
+}
     
-  .corpo .closebtn {
+.corpo .closebtn {
     position: absolute;
     top: 4rem;
     right: 1rem;
@@ -47,13 +47,42 @@ section#corpo{
     color: #1E90FF;
     display: block;
     transition: margin-left .8s ease-in-out;
-  }
+}
 
- 
 section#corpo h4{
     text-align: center;
     border-radius:3px;
     padding: 10px;
     background-color: #dddddd;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, .4);
+}
+
+section#corpo h6{
+    text-align: left;
+    padding: 10px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.apostila{
+    height: 600px;
+    width: 100%;
+}
+
+.espaco iframe{
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.espaco iframe.video{
+    height: 400px;
+    width: 560px;
+    max-width: 100%;
+    height: 315px; 
+}
+
+.espaco iframe.doc{
+    position: relative;
+    height: 800px;
+    width: 100%;
 }
