--- a/css/styleviewcursoV1.css
+++ b/css/styleviewcursoV1.css
@@ -94,3 +94,51 @@ section#corpo h4.atividade, ol li.atividade {
 section#corpo h4.dica, ol li.dica {
     background-color:  #cf9f51;
 }
+
+#baixar .button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #3d844b;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 10px;
+    padding: 20px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  #baixar .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  #baixar .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  #baixar .button:hover span {
+    padding-right: 25px;
+  }
+  
+  #baixar .button:hover span:after {
+    opacity: 1;
+    right: 0;
+    
+  }
+  
+  #baixar .button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
