--- a/css/styleviewcursoV1.css
+++ b/css/styleviewcursoV1.css
@@ -40,7 +40,7 @@ section#corpo{
     text-align:center;
 }
     
-.corpo .closebtn {
+.corpo #closebtn {
     position: absolute;
     top: 4rem;
     right: 1rem;
@@ -75,11 +75,12 @@ section#corpo h6{
     padding-bottom: 20px;
 }
 
-.espaco iframe.video{
-    height: 400px;
+.espaco iframe#video{
+    height: 100%;
+    max-height: 560px;
+    min-height: 315px;
     width: 560px;
     max-width: 100%;
-    height: 315px; 
 }
 
 .espaco iframe.doc{
