--- a/css/styleviewcursoV1.css
+++ b/css/styleviewcursoV1.css
@@ -75,12 +75,11 @@ section#corpo h6{
     padding-bottom: 20px;
 }
 
-.espaco iframe#video{
-    height: 100%;
-    max-height: 560px;
-    min-height: 315px;
-    width: 560px;
-    max-width: 100%;
+.espaco iframe.video{
+    height: 100vh;
+    max-height: 380px;
+    min-height: 240px;
+    width: 100%;
 }
 
 .espaco iframe.doc{
